feat(COSE471_hw2): done hw2

--- a/.gitignore
+++ b/.gitignore
@@ -77,6 +77,6 @@ COSE321/class_experiments_v21/.metadata/
 COSE321/class_experiments_v21/.Xil/
 
 COSE471/.idea/
-COSE471/.ipynb_checkpoints/
+COSE471/*/.ipynb_checkpoints/
 
 COSE157/
