--- a/COSE331/Homework1/local.properties
+++ b/COSE331/Homework1/local.properties
@@ -4,6 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Mar 29 21:51:02 KST 2022
-sdk.dir=C\:\\Users\\(username)\\AppData\\Local\\Android\\Sdk
-ndk.dir=C\:\\Users\\(username)\\AppData\\Local\\Android\\Sdk\\ndk\\19.2.5345600
+#Fri Apr 01 22:32:58 KST 2022
+sdk.dir=C\:\\Users\\hanchaa\\AppData\\Local\\Android\\Sdk
+ndk.dir=C\:\\Users\\hanchaa\\AppData\\Local\\Android\\Sdk\\ndk\\19.2.5345600
